update again list

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 /eclipse
 /.metadata
 # Ignore the newData.csv file in the machineLearning directory
-JPyWorkSpace/machineLearning/newData.csv
+machineLearning/newData.csv
